# 123123

./: .gitignore  .pre-commit-config.yaml  DEPLOY_GUIDE.md  DRY_IMPLEMENTATION_REPORT.md  Dockerfile  FINAL_STATUS_REPORT.md  Makefile  POSTGRESQL_DEPLOYMENT_GUIDE.md  POSTGRESQL_IMPLEMENTATION_REPORT.md  QUICK_DEPLOY.md  QUICK_DEPLOY_SUMMARY.md  README.md  README_DEPLOY.md  README_DEPLOY_FINAL.md  SERVER_FIX_GUIDE.md  SUBSCRIPTION_GUIDE.md  UPDATE_GUIDE.md  check_deploy.py  check_system.sh  clear_webhook.py  config.py  conftest.py  database.py  database_async.py  database_session_manager.py  deploy.sh  deploy_server.md  docker-compose.yml  env.example  fast_start.bat  final_ai_test.py  final_user_check.py  fix_server_config.sh  force_clear.py  install_server.sh  keyboards.py  main.py  main_simple.py  models.py  plan.md  (+30 more)
docs/: DRY_PRINCIPLE_GUIDE.md
examples/: db_session_examples.py
handlers/admin/: keyboards.py  middlewares.py  router.py  states.py
handlers/common/: router.py
handlers/compatibility/: __init__.py  router.py
handlers/natal_chart/: __init__.py  router.py
handlers/predictions/: router.py
handlers/profile/: __init__.py  router.py
handlers/sky_map/: __init__.py  keyboards.py  router.py  states.py
handlers/star_advice/: __init__.py  keyboards.py  router.py  states.py
handlers/subscription/: __init__.py  router.py
scripts/: debug_sky.py  migrate_to_postgresql.py
services/: ai_predictions.py  antispam_service.py  aspect_calculator.py  astro_calculations.py  geocoding_service.py  house_calculator.py  motivation_service.py  sky_visualization_service.py  star_advice_service.py  subscription_service.py  transit_calculator.py  zodiac_data_loader.py
tests/: test_admin_handlers.py  test_admin_middleware.py  test_astro_calculations.py  test_async_database.py  test_database.py  test_geocoding_service.py  test_motivation_service.py  test_postgresql_integration.py  test_profile_handler.py  test_subscription_service.py  test_transit_calculator.py
